examples/test/testpolicy7969.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7969
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key44: value1
      key26: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value13
          key49: value27
          key43: value2
      podSelector:
        matchLabels:
          key23: value32
          key7: value32
          key8: value7
